--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "sh deploy.sh",
+    "predeploy": "vue-cli-service build"
   },
   "dependencies": {
     "vue": "^3.3.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
+    "gh-pages": "^5.0.0",
     "sass": "^1.63.6",
     "sass-loader": "^13.3.2",
     "vite": "^4.3.9"
