--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "npm run build && gh-pages -b gh-pages -d dist",
+    "start": "npm run build && gh-pages -d dist",
     "predeploy": "vue-cli-service build"
   },
   "dependencies": {
